removed user from eveything
