# rails_backend/config/routes.rb
@@ -2,9 +2,9 @@ Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/'
   mount Rswag::Api::Engine => '/api-docs'
 
-  get '/user/:name', to: 'user#show', as: 'user_by_name'
+  # get '/user/:name', to: 'user#show', as: 'user_by_name'
   resources :user_stat
-  resources :user
+  # resources :user
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
 
   # Reveal health status on /up that returns 200 if the app boots with no exceptions, otherwise 500.
